--- a/project-1/src/components/Navbar/Navbar.module.css
+++ b/project-1/src/components/Navbar/Navbar.module.css
@@ -11,3 +11,7 @@
   gap: 24px;
   align-items: center;
 }
+
+.navbar li {
+  cursor: pointer;
+}
